Established connection with the frontend for docker swarm via kong and added userId and role to jwt authentication.